--- a/full_connected.yaml
+++ b/full_connected.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   description: These are OIC Integration APIs for Brewer Management
   version: 1.0.0
-  title: AMP OIC APIs
+  title: AMP Oracle Integration Cloud (OIC) APIs
   # put the contact info for your development or API team
   contact:
     email: bryan.arndorfer_ex@kdrp.com
